--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,21 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.2.1 # Untuk HTTP requests
+  shared_preferences: ^2.2.3 # Untuk menyimpan token JWT
+  intl: ^0.19.0 # Untuk format tanggal/waktu (opsional)
+  image_picker: ^1.1.2 # Untuk memilih gambar (opsional, jika fitur upload/edit gambar diperlukan)
+  cached_network_image: ^3.3.1 # Pastikan ini ada!
+  url_launcher: ^6.2.6 # Pastikan ini ada!
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^5.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
